[package]
name = "client_injection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[dependencies]
udcp = { version = "0.1", path = "..", features = ["trace"] }
bincode = { version = "1" }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

